--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=block");
 
 @import "tailwindcss";
 
@@ -90,15 +90,15 @@ body {
     @apply relative z-10 min-h-dvh w-full border border-transparent;
 
     h1 {
-      @apply md:mt-32 mt-40 text-8xl md:text-[20vw] leading-none text-center font-modern-negra;
+      @apply md:mt-30 mt-40 text-8xl md:text-[15vw] leading-none text-center font-modern-negra;
     }
 
     .left-leaf {
-      @apply absolute left-0 md:top-20 xl:top-36 2xl:top-52 md:bottom-auto -bottom-20 md:w-fit w-1/3;
+      @apply absolute left-0 top-45 md:top-20 xl:top-36.5 2xl:top-52 md:bottom-auto -bottom-20 md:w-35 w-30 h-fit;
     }
 
     .right-leaf {
-      @apply absolute right-0 md:bottom-0 xl:top-0 2xl:top-12 top-1/2 md:w-fit w-24;
+      @apply absolute right-0 md:bottom-0 md:top-43 xl:top-0 2xl:top-12 top-65 md:w-35 w-24;
     }
 
     .body {
